<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NFC LockScreenOff Enabler</string>
    <string name="menu_settings">Settings</string>
    <string name="NfcScreenOptionsTitle">Enable NFC, in addition to normal usage when the screen is on, when the:</string>
    <string name="device_unlocked">screen on, device unlocked</string>
    <string name="LockedScreenOn">phone is locked, but the screen is on</string>
    <string name="ScreenOff">screen is off (regardless of lock state)</string>
    <string name="DisablePluginTips">To have NFC behaviour return to the default (only enabled when the screen is on and the phone unlocked), either uninstall this mod or disable this module in Xposed Installer.</string>
    <string name="TaglostMessage">Enabled tag lost message</string>
    <string name="play_tag_lost_sound">Play tag lost sound</string>
    <string name="pref_description_play_tag_lost_sound">Play a sound when an NFC tag is lost</string>
    <string name="pref_description_enable_tag_lost_detection">Notify applications when an NFC tag is lost</string>
    <string name="pref_title_enable_nfc_for_lock_state">Enable NFC when</string>
    <string name="copyright_summary">Copyright © 2012-2013 – qwerty12\nClick for contributors.</string>

    <string-array name="contributors" translatable="false">
        <item>qwerty12</item>
        <item>madfish73</item>
        <item>MohammadAG</item>
        <item>sleavitt</item>
        <item>vrthe1</item>
    </string-array>
    
    <string-array name="contributors_how">
    	<item>Main developer</item>
    	<item>Tag lost support</item>
    	<item>NFC Unlocking / Minor tweaks</item>    
    	<item>TecTile and 4.1 support</item>
    	<item>HTC One support</item>
    </string-array>
    
	<!-- Translators, add your names here so you're credited in the app -->
    <string-array name="translators" translatable="false">
        <item>liveasx (Chinese / 汉语)</item>
        <item>etatto (French / Français)</item>
    </string-array>

    <string name="contributors_title">Contributors</string>
    <string name="pref_title_presence_check_timeout">Presence check timeout</string>
    <string name="pref_description_presence_check_timeout">Change this value to reduce battery consumption when the device is kept on an NFC tag</string>
    <string name="pref_summary_presence_check">Current timeout value:</string>
    <string name="pref_dialog_description_presence_check_timeout">Change the timeout of checking for an NFC tag when the device is placed on one. A higher value means lower battery consumption while the device is on the tag. Values in milliseconds (1s = 1000ms)</string>
    <string name="pref_title_debug_mode">Debug mode</string>
    <string name="pref_description_debug_mode">Show debug messages in logcat</string>
    <string name="pref_title_show_in_launcher">Show icon in launcher</string>
    <string name="pref_description_show_in_launcher">Disabling this hides the icon from the launcher, open settings by tapping the module in Xposed Installer</string>
    <string name="title_activity_nfc_tags">Authorized NFC Tags</string>
    <string name="action_settings">Settings</string>
    <string name="authorized_nfc_tags_title">Authorized NFC tags</string>
    <string name="authorized_nfc_tags_description">NFC tags that will unlock your device</string>
    <string name="tag_already_added">NFC tag already added</string>
    <string name="nfc_tags_activity_description">The following NFC tags will unlock your device. Tap an NFC tag with your device to add it, swipe an ID left or right to delete it. NFC while screen off has to be enabled.</string>
    <string name="unnamed_tag">Unnamed tag</string>
    <string name="new_tag_detected">New NFC tag detected</string>
    <string name="type_in_name_for_tag">Type a name for the tag:</string>
    <string name="nfc_sounds_to_play">NFC sounds to play</string>
    <string name="nfc_sounds_to_play_description">Select the sounds that should be played when NFC-related events happen</string>
    <string name="nfc_sound_start">Start sound</string>
    <string name="nfc_sound_end">End sound</string>
    <string name="nfc_sound_error">Error sound</string>
    <string name="nfc_sound_taglost">Tag lost sound</string>
    <string name="settings_migrated">Settings migration successful</string>
    <string name="undo">Undo</string>
    <string name="tag_unauthorized">Tag deauthorized</string>
    <string name="translators_title">Translators</string>

</resources>
